# grupo_qual_iar

./: README.md  docker-compose.yml  requirements.in
br/: __init__.py
br/aqi/: cli.py  validate.py
brasilia-air-quality/: Dockerfile  LICENSE  Makefile  pyproject.toml
brasilia-air-quality/artifacts/cache/: arcgis_stations.json
brasilia-air-quality/br/aqi/: __init__.py  export.py  normalize.py  rag.py  sources.py  utils.py
brasilia-air-quality/docs/: SOURCES.md
brasilia-air-quality/tests/: test_sources.py
data/bronze/: arcgis_stations.csv
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
notebooks/: exploration.ipynb
tests/: test_normalize.py  test_rag.py
